simple fix for whitespace

--- a/styles.css
+++ b/styles.css
@@ -280,6 +280,7 @@ input[type="number"] {
     width: 100%;
     margin: 0;
     padding: 0;
+    background-repeat: repeat;
   }
   * {
     padding: 0;
